--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "io.chgocn.demo.mvp"
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -31,12 +31,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.6.1'
     compile 'com.google.dagger:dagger:2.0.2'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile "com.android.support:cardview-v7:23.4.0"
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile project(':lib')
 
 }
