--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "io.chgocn.demo.mvp"
-        minSdkVersion 21
+        applicationId "com.chgocn.gankio.mvp"
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        //Or，if you can continue to check for errors in release builds,
+        //but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
