--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
 
     <application
         android:name=".GankApplication"
-        android:debuggable="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:allowClearUserData="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".personal.info.PersonalInfoEditActivity"
+            android:label="" />
         <activity
             android:name=".WebActivity"
             android:label="">
@@ -23,7 +25,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhotoGestureActivity"
+        <activity
+            android:name=".PhotoGestureActivity"
             android:label="">
             <intent-filter>
                 <action android:name="com.chgocn.gankio.mvp.PHOTO_GESTURE" />
