--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         //but continue the build even when errors are found:
         abortOnError false
     }
+    buildToolsVersion '25.0.2'
 }
 
 dependencies {
