--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -26,6 +26,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '25.0.2'
 }
 
 dependencies {
